# Course-Recommendation

./: .gitignore  ATTRIBUTION.md  README.md  SETUP.md  pyproject.toml  self-assessment.md
.github/workflows/: pylint.yml
app/: __init__.py  app.py
app/static/CSS/: styles.css
app/static/js/: script.js
app/templates/: index.html
crec/: .env  __about__.py  agent.py  config.py  conversation_memory.py  setup.py  synthesizer.py
crec/ingestion/: courses.py  major_req_dict.py  schedule.py  utils.py
crec/tools/: course_ret.py  major_ret.py  schedule_ret.py
data/: majors.json
src/crec/: config.py  conversation_memory.py  test.py
src/crec/ingestion/: courses.py  major-req.py  major_rec_dict.py  parse-data.py  schedule.py  setup.py  utils.py
src/crec/tools/: course_ret.py  major_req.py  major_ret.py  schedule_ret.py
tests/: __init__.py  test.py
